<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/signupbackground"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="@dimen/_24sdp"
    android:scrollbars="none"
    tools:context=".activities.SignUpActivity">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/layoutImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_135sdp">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/imageProfile"
                android:layout_width="@dimen/_80sdp"
                android:layout_height="@dimen/_80sdp"
                android:background="@drawable/background_image"
                android:scaleType="centerCrop"
                app:riv_oval="true" />

            <TextView
                android:id="@+id/textAddImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/add_image"
                android:textColor="@color/secondary_text"
                android:textSize="@dimen/_10ssp" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/inputFirstName"
                style="@style/fill_in1"
                android:layout_marginEnd="@dimen/_2sdp"
                android:layout_weight="1"
                android:hint="@string/first_name"
                android:inputType="text"
                android:importantForAutofill="no" />

            <EditText
                android:id="@+id/inputLastName"
                style="@style/fill_in1"
                android:layout_marginStart="@dimen/_2sdp"
                android:layout_weight="1"
                android:hint="@string/last_name"
                android:inputType="text"
                android:importantForAutofill="no" />
        </LinearLayout>

        <EditText
            android:id="@+id/inputEmail"
            style="@style/fill_in1"
            android:layout_marginBottom="@dimen/_10sdp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/inputPassword"
            style="@style/fill_in1"
            android:layout_marginBottom="@dimen/_10sdp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:importantForAutofill="no" />

        <EditText
            android:id="@+id/inputConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:background="@drawable/background_input"
            android:fontFamily="sans-serif-condensed-light"
            android:hint="@string/confirm_password"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="@dimen/_10sdp"
            android:paddingEnd="@dimen/_10sdp"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_13ssp"  />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textSignIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/agencyfb"
                    android:text="@string/log_in"
                    android:textColor="@color/primary"
                    android:textSize="@dimen/_15ssp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_75sdp"
                    android:animateLayoutChanges="true">

                    <ImageButton
                        android:id="@+id/buttonSignUp"
                        android:layout_width="@dimen/_50sdp"
                        android:layout_height="@dimen/_50sdp"
                        android:background="@drawable/circle_button"
                        android:contentDescription="@string/button_circle"
                        app:srcCompat="@drawable/ic_baseline_arrow_forward_ios_24" />

                    <ProgressBar
                        android:id="@+id/progressBar"
                        android:layout_width="@dimen/_25sdp"
                        android:layout_height="@dimen/_25sdp"
                        android:layout_gravity="center"
                        android:visibility="invisible"/>

                </FrameLayout>


            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</ScrollView>