<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/forgotpassbackground"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="@dimen/_24sdp"
    android:scrollbars="none"
    tools:context=".activities.ForgotPassword">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <EditText
            android:id="@+id/inputEmail"
            android:layout_marginTop="@dimen/_250sdp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            style="@style/fill_in1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_25sdp"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_5sdp"
                android:orientation="vertical"
                android:layout_weight="1"
                android:gravity="center_vertical">

                <TextView
                    android:id="@+id/textSignIn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/agencyfb"
                    android:text="@string/log_in"
                    android:textColor="@color/primary"
                    android:textSize="@dimen/_15ssp"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_70sdp"
                    android:animateLayoutChanges="true">

                    <ImageButton
                        android:id="@+id/buttonForgotPass"
                        android:layout_width="@dimen/_50sdp"
                        android:layout_height="@dimen/_50sdp"
                        android:layout_gravity="center"
                        android:background="@drawable/circle_button"
                        android:contentDescription="@string/button_circle"
                        app:srcCompat="@drawable/ic_baseline_arrow_forward_ios_24" />

                    <ProgressBar
                        android:id="@+id/progressBar"
                        android:layout_width="@dimen/_25sdp"
                        android:layout_height="@dimen/_25sdp"
                        android:layout_gravity="center"
                        android:visibility="invisible"/>
                </FrameLayout>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>